--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -4,7 +4,7 @@
 
 #header-nav {
     background-color: #AAA5A5;
-    border-radius: 5%;
+    border-radius: 0;
     border: 0;    
     border: solid black 5px;
     margin-bottom: 0;
